Responsive overflow fix

--- a/media.css
+++ b/media.css
@@ -84,7 +84,6 @@
     .companylogos{
         width: 90vw;
         overflow: hidden;
-        background-color: antiquewhite;
         margin: auto 0px !important;
         gap: 5px;
         width: 90vw !important;
